--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "npx json-server ./json/db.json"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
@@ -19,9 +20,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.6",
     "@splidejs/react-splide": "^0.7.12",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.4",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1"
